--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,11 @@ target
 .settings
 /.classpath
 /src/main/webapp/Resource
+
+.settings/org.eclipse.jdt.core.prefs
+
+.settings/org.eclipse.wst.common.component
+
+.settings/org.eclipse.wst.common.project.facet.core.xml
+
+logs/ssm.log
