更新数据库连接，改为mssql数据库

--- a/src/main/java/jdbc.properties
+++ b/src/main/java/jdbc.properties
@@ -1,7 +1,11 @@
-driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://127.0.0.1:3306/mybatisdb
-username=sql5177
-password=sql5177
+#driver=com.mysql.jdbc.Driver
+#url=jdbc:mysql://127.0.0.1:3306/mybatisdb
+#username=sql5177
+#password=sql5177
+driver=net.sourceforge.jtds.jdbc.Driver
+url=jdbc:jtds:sqlserver://124.251.46.179:1433;DatabaseName=channelsales_test
+username=channelsales_test_admin
+password=ac1297F3
 #\u5B9A\u4E49\u521D\u59CB\u8FDE\u63A5\u6570
 initialSize=0
 #\u5B9A\u4E49\u6700\u5927\u8FDE\u63A5\u6570
