--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,17 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+			<!-- tomcat -->
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.0</version>
+				<configuration>
+					<url>http://localhost:8080/manager/text</url>
+					<server>test-tom</server>
+					<path>/test-tom</path>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
